<resources>
    <string name="app_name">FotoTagz</string>
    <string name="gallery">Galeria</string>
    <string name="camera">Câmera</string>
    <string name="tagged">Biblioteca FotoTagz</string>
    <string name="image_description">Image chosen by the user</string>
    <string name="create_tag_confirmation">Create tag where touched?</string>
    <string name="delete_tag_confirmation">Delete this tag?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="no_data_available">No images have been tagged yet!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

</resources>
